# PhysicsEngine

./: BouncingBallCOPY.cpp  README.md  StaticEqChecker.cpp  StaticEqCheckerCommand.txt  StaticEqCheckerCommand.txt~  backup.cpp  demo_cardsEDIT.cpp  manyShapes.cpp  sample6.cpp  sceneValidator.h
DemuraSamples/: EditSample15.cpp  sample14.cpp  sample15.cpp
DemuraSamples/Bunny/: trimesh.cpp
JoesTests/: LearningAffine.cpp  command.txt
ObjFileExtractor/: objTester2.cpp  test
SampleBallBounce/: SampleBallBounceCompilationCommand.txt  StaticEqChecker.cpp  positions.cpp  sample6.cpp
Trimesh/: CMakeLists.txt  COMPILE.txt~  aCOMPILE.txt  aCOMPILE.txt~  cube.h~  demo.cpp  obj2header.cpp  objTester2.cpp  obj_parser.cpp  sceneValidator.cpp  sceneValidator.h  test.cpp  test_sceneValidator.cpp  trimeshLoad.cpp
resources/: Git_workflow.txt  Notes.txt  positions.cpp
